--- a/index.html
+++ b/index.html
@@ -1410,6 +1410,13 @@ SELECT ?name ?person WHERE {
     <iframe class="query-client" src="query-client/#datasources=https%3A%2F%2Ffragments.dbpedia.org%2F2016-04%2Fen&query=SELECT%20%3Fname%20%3Fperson%20%3Fspouse%20WHERE%20%7B%0A%20%20%3Fperson%20rdfs%3Alabel%20%3Fname.%0A%20%20%3Fperson%20dbo%3AinfluencedBy%20dbp%3APablo_Picasso.%0A%20%20OPTIONAL%20%7B%20%3Fperson%20dbo%3Aspouse%20%3Fspouse.%20%7D%0A%20%20FILTER%20LANGMATCHES(LANG(%3Fname)%2C%20%22EN%22)%0A%7D%0ALIMIT%2010"></iframe>
   </div>
 
+  <div class="quiz slide" id="no-spouse">
+    <h2>
+      Does the <code>null</code> for <code>?spouse</code> mean<br>
+      that Charles Sheeler is a <code>ex:Single</code>?
+    </h2>
+  </div>
+
   <div class="toc slide" id="recap">
     <ul>
       <li><a href="#toc-rdf">RDF &amp; Solid</a></li>
