--- a/index.html
+++ b/index.html
@@ -1425,6 +1425,42 @@ SELECT ?name ?person WHERE {
     </ul>
   </div>
 
+  <div class="slide" id="conclusion">
+    <h2>
+      <span class="next">Don’t fight Linked Data.</span>
+      <span class="next">Don’t fight RDF.</span><br>
+      <span class="next">Use Linked Data to fight complexity.</span>
+    </h2>
+    <ul>
+      <li>
+        <strong>RDF is a flexible tool</strong> that helps us deal with<br>
+        the complexities of decentralized knowledge.
+        <ul class="inline next">
+          <li>distribution across Pods</li>
+          <li>heterogeneity</li>
+          <li>…</li>
+        </ul>
+      </li>
+      <li class="next">
+        Can’t we do this more simply with JSON?
+        <ul>
+          <li class="next">
+            <strong>Absolutely.</strong>
+            <span class="next">You’ll just have to keep inventing features<br>
+              until you support what RDF does out of the box.</span>
+          </li>
+          <li class="next">
+            And redo 25 years of R&amp;D 😉
+          </li>
+        </ul>
+      </li>
+      <li class="next">
+        <em>Next frontier:</em>
+        <strong>integrate this power into Solid tooling</strong>.
+      </li>
+    </ul>
+  </div>
+
   <footer>
     <p class="badge"><a href="https://github.com/RubenVerborgh/RDF-for-Solid-2022">View on GitHub</a></p>
     <p class="license">
