Add link to slides.

--- a/index.html
+++ b/index.html
@@ -1208,6 +1208,19 @@ ex:hasSpouse a owl:FunctionalProperty.</code></pre>
     <iframe class="query-client" src="eye-client/#data=tim.n3&amp;data=knows.n3&amp;data=symmetric-property.n3&amp;query=query.n3"></iframe>
   </div>
 
+  <div class="slide" id="qr">
+    <h2>
+      Download these slides<br>
+      to try it yourself.
+    </h2>
+    <figure>
+      <img src="images/qr-slides.svg">
+      <figcaption>
+        <p><a href="https://go.verborgh.org/rdf-solid-2022">go.verborgh.org/rdf-solid-2022</a></p>
+      </figcaption>
+    </figure>
+  </div>
+
   <div class="toc slide" id="toc-querying">
     <ul>
       <li><a href="#toc-rdf">RDF &amp; Solid</a></li>
