Fix quiz slide.

--- a/index.html
+++ b/index.html
@@ -1229,7 +1229,7 @@ ex:hasSpouse a owl:FunctionalProperty.</code></pre>
     </ul>
   </div>
 
-  <div class="question slide" id="graphql-vs-sparql">
+  <div class="quiz slide" id="graphql-vs-sparql">
     <h2>
       What is the difference<br>
       between GraphQL and SPARQL?
