Link to Web Fundamentals.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       <a href="http://www.ugent.be/">Ghent University</a> –
       <a href="http://www.imec.be/">imec</a>
     </p>
+    <p>
+      These slides are an abridged version
+      of my <a href="https://rubenverborgh.github.io/WebFundamentals/">Web Fundamentals</a> course.
+    </p>
   </header>
 
   <div class="title slide" id="title">
